--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -61,11 +61,11 @@ jobs:
       run: |
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH openwrt
-        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+        ln -sf /workdir/openwrt19 $GITHUB_WORKSPACE/openwrt19
 
     - name: Load custom feeds
       run: |
-        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+        [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt19/feeds.conf.default
         chmod +x $DIY_P1_SH
         cd openwrt19
         $GITHUB_WORKSPACE/$DIY_P1_SH
@@ -78,8 +78,8 @@ jobs:
 
     - name: Load custom configuration
       run: |
-        [ -e files ] && mv files openwrt/files
-        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e files ] && mv files openwrt19/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt19/.config
         chmod +x $DIY_P2_SH
         cd openwrt19
         $GITHUB_WORKSPACE/$DIY_P2_SH
